html and CSS done- 3 diffrent Nav

--- a/NAV_1/index.html
+++ b/NAV_1/index.html
@@ -14,7 +14,7 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="style.css" />
 
-    <title>Navbar 3 Ways Flexbox</title>
+    <title>Navbar 1</title>
   </head>
   <body>
     <header>
